<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:contentDescription="@string/error_image"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:src="@drawable/exception" />

    <com.google.android.material.textview.MaterialTextView
        style="?attr/textAppearanceHeadline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_title" />

    <com.google.android.material.button.MaterialButton
        style="?attr/textAppearanceButton"
        android:id="@+id/retryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/retry" />

</LinearLayout>